<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#00ffffff"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical">
            <LinearLayout
                android:id="@+id/device_adapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/device_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/example_device"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/device_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/address"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/RSSI_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"
                            android:contentDescription="bt"
                            android:src="@drawable/circle_bluetooth"/>

                        <TextView
                            android:id="@+id/device_rssi"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.6"
                            android:gravity="start"
                            android:text="@string/rssi"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/delta_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_gravity="start"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <ImageView
                            android:id="@+id/pulse"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"
                            android:contentDescription="pulse"
                            android:src="@drawable/pulse"/>

                        <TextView
                            android:id="@+id/device_delta"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.6"
                            android:gravity="start"
                            android:text="@string/connection_interval"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <LinearLayout
                    android:id="@+id/flag_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/flag_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.4"
                        android:fontFamily="sans-serif"
                        android:gravity="start"
                        android:text="@string/flags"
                        android:textColor="@color/light_text"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/flag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:fontFamily="sans-serif"
                        android:text="@string/number2"
                        android:textColor="@color/light_text"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/siliconlabs_red"/>

                <LinearLayout
                    android:id="@+id/manuf_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/manuf_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.4"
                        android:fontFamily="sans-serif"
                        android:gravity="start"
                        android:text="@string/manuf_specific_data"
                        android:textColor="@color/light_text"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/manuf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:fontFamily="sans-serif"
                        android:text="@string/number2"
                        android:textColor="@color/light_text"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/siliconlabs_red"/>

                <LinearLayout
                    android:id="@+id/tx_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tx_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.4"
                        android:fontFamily="sans-serif"
                        android:gravity="start"
                        android:text="@string/tx_power"
                        android:textColor="@color/light_text"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tx"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:fontFamily="sans-serif"
                        android:text="@string/number2"
                        android:textColor="@color/light_text"
                        android:textSize="14sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/siliconlabs_red"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/timestamp_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif"
                        android:gravity="start"
                        android:text="@string/scan_record"
                        android:textColor="@color/light_text"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/scanRecord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textSize="12sp"
                        android:textColor="@color/light_text"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/siliconlabs_red"/>

                <Button
                    android:id="@+id/config_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="afterDescendants"
                    android:title="@string/connect"
                    android:text="@string/connect"/>
            </LinearLayout>
         </LinearLayout>
    </LinearLayout>

